--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-"Work in progress!" 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Work in Progress!</title>
+</head>
+<body>im trying my best here</body>
+</html>
