looks better (or worse)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Work in Progress!</title>
-</head>
-<body>im trying my best here</body>
+	<head>
+		<title>Under Construction</title>
+	</head>
+	<body>
+		<H1>im trying my best here</H1>
+		<paragraph>thanks for looking at this site whoever you are</paragraph>
+	</body>
 </html>
