fixed functions syntax

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			function show(string id) {
+			function show(id) {
 				var element = document.getElementById(id);
 				element.innerHTML = "wow!!!!!";
 			}
