added css file/converted to dark mode

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Under Construction</title>
+		<link rel="stylesheet" type="text/css" href="basic.css"
 	</head>
 	<body>
 		<script type="text/javascript">
@@ -14,7 +15,7 @@
 			}
 		</script>
 		<H1>im trying my best here</H1>
-		<p style="font-size:140%;">thanks for looking at this site whoever you are</p> 
+		<H3>thanks for looking at this site whoever you are</H3> 
 		<p id="instructions"> if you can guess the code right i'll tell you good job </p>
 		<input id="userCodeGuess" type="text"/><button onclick="editText(getInput('userCodeGuess'), 'good job.')">check if you got it right</button>
 		<p id="idk">  </p>
