changed password and a test to reduce lines of code in css file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		<H3>thanks for looking at this site whoever you are</H3> 
 		<p id="instructions"> if you can guess the code right i'll tell you good job </p>
 		<input id="userCodeGuess" type="text"/><button onclick="editText(getInput('userCodeGuess'), 'good job.')">check if you got it right</button>
-		<p id="idk">  </p>
+		<p id="password">  </p>
 	</body>
 </html>
