--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
+	<!-- title defines website title, link applies css -->
 	<head>
 		<title>Under Construction</title>
 		<link rel="stylesheet" type="text/css" href="basic.css"
 	</head>
+	<!-- body -->
 	<body>
+		<!-- top part -->
+		<header>
+			<H1>Trinity Yip</H1>
+		</header>
+		<!-- links -->
+		<nav>
+			<button onclick="window.location.href='index.html';" class="navButton">home</button>
+			<button onclick="window.location.href='resume.html';" class="navButton">resume</button>
+		</nav>
 		<script type="text/javascript">
 			function getInput(id) {
 				return document.getElementById(id).value;
@@ -14,7 +25,7 @@
 				element.innerHTML = message;
 			}
 		</script>
-		<H1>im trying my best here</H1>
+		<H1 style="padding:5px;">im trying my best here</H1>
 		<H3>thanks for looking at this site whoever you are</H3> 
 		<p id="instructions"> if you can guess the code right i'll tell you good job </p>
 		<input id="userCodeGuess" type="text"/><button onclick="editText(getInput('userCodeGuess'), 'good job.')">check if you got it right</button>
