--- a/resume.html
+++ b/resume.html
@@ -3,18 +3,22 @@
 	<!-- title defines website title, link applies css -->
 	<head>
 		<title>Under Construction</title>
-		<link rel="stylesheet" type="text/css" href="basic.css"
+		<link rel="stylesheet" type="text/css" href="basic.css">
 	</head>
 	<!-- body -->
 	<body>
 		<!-- top part -->
 		<header>
-			<H1>Trinity Yip</H1>
+			<div class="headDiv">
+				<H1>Trinity Yip</H1>
+			</div>
 		</header>
 		<!-- links -->
 		<nav>
-			<button onclick="window.location.href='index.html';" class="navButton">home</button>
-			<button onclick="window.location.href='resume.html';" class="navButton">resume</button>
+			<div class="navLinkContainer">
+				<a href="index.html" class="navLink" data-content="HOME">HOME</a>
+				<a href="resume.html" class="navLink" data-content="RESUME">RESUME</a>
+			</div>
 		</nav>
 		<!-- resume -->
 		<section>
