--- a/resume.html
+++ b/resume.html
@@ -10,14 +10,15 @@
 		<!-- top part -->
 		<header>
 			<div class="headDiv">
-				<H1>Trinity Yip</H1>
+				<H1 class="websiteTitle">Trinity Yip</H1>
 			</div>
 		</header>
 		<!-- links -->
 		<nav>
 			<div class="navLinkContainer">
-				<a href="index.html" class="navLink" data-content="HOME">HOME</a>
+				<a href="home.html" class="navLink" data-content="HOME">HOME</a>
 				<a href="resume.html" class="navLink" data-content="RESUME">RESUME</a>
+				<a href="projects.html" class="navLink" data-content="PROJECTS">PROJECTS</a>
 			</div>
 		</nav>
 		<!-- resume -->
