updated projects page

--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,14 @@
 			</div>
 		</nav>
 		<!-- main site -->
+			<!-- rest counter -->
+		<div class="projectDiv">
+			<H3>Rest Counter (C#, Windows Forms Application)</H3>
+		</div>
+		<H5>My rest counter app counts music for the user, allowing them to take break without counting long rests!</H5>
 
+		<img src="/assets/restCounterApp.png" alt="Recording the sheet music into the program" style="float:left;">
+		<p>the user can record  their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.</p>
+		<img src="/assets/restCounterApp2.png" alt="Loading the piece" style="float:right;">
 	</body>
 </html>
