--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,8 @@
 		</div>
 		<H5>My rest counter app counts music for the user, allowing them to take break without counting long rests!</H5>
 
-		<img src="/assets/restCounterApp.png" alt="Recording the sheet music into the program" style="float:left;">
+		<img src="/assets/restCounterAppRecordingSheet.png" alt="Recording the sheet music into the program" style="float:left;" >
 		<p>the user can record  their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.</p>
-		<img src="/assets/restCounterApp2.png" alt="Loading the piece" style="float:right;">
+		<img src="/assets/restCounterAppBrowsingPieces.png" alt="Loading the piece" style="float:right;">
 	</body>
 </html>
