added description to images

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 	<!-- title defines website title, link applies css -->
 	<head>
-		<title>Under Construction</title>
+		<title>Trinity's Website -  Projects</title>
 		<link rel="stylesheet" type="text/css" href="basic.css">
 	</head>
 	<!-- body -->
@@ -39,7 +39,11 @@
 		<H5>My rest counter app counts music for the user, allowing them to take break without counting long rests!</H5>
 
 		<img src="/assets/restCounterAppRecordingSheet.png" alt="Recording the sheet music into the program" style="float:left;" >
-		<p>the user can record  their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.</p>
+		<p style="position:relative; top:8px;">the user can record their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.</p>
+		<p> the user can then save the piece or click play to begin! </p>
+		<p>when the user clicks 'save', three arrays are saved onto an xml file by loop to be accessed later.</p>
+		<p>the player can be paused by pressing space. </p>
 		<img src="/assets/restCounterAppBrowsingPieces.png" alt="Loading the piece" style="float:right;">
+		<p>here, you can see the user opening a saved piece. </p>
 	</body>
 </html>
