--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 	<!-- title defines website title, link applies css -->
 	<head>
-		<title>Under Construction</title>
+		<title>Trinity's Website - Resume</title>
 		<link rel="stylesheet" type="text/css" href="basic.css">
 	</head>
 	<!-- body -->
