--- a/resume.html
+++ b/resume.html
@@ -33,6 +33,11 @@
 						<li>Good Character, Chamber Orchestra Class 2018-2019</li>
 						<li>Innovative Photographer 2019-2020</li>
 					</ul>
+					<p>Grades:</p>
+					<ul>
+						<li>Grade 9: 93% average</li>
+						<li>Grade 10: 94% average</li>
+					</ul>
 				<H3>Richmond Rose Public School</H3>
 					<p>Graduation: June 2018</p>
 					<p>Awards:</p>
