--- a/projects.html
+++ b/projects.html
@@ -1,102 +1,154 @@
-<!DOCTYPE html>
-<html>
-	<!-- title defines website title, link applies css -->
-	<head>
-		<title>Trinity's Website -  Projects</title>
-		<link rel="stylesheet" type="text/css" href="basic.css">
-	</head>
-	<!-- body -->
-	<body>
-		<!-- JAVASCRIPT -->
-		<script type="text/javascript">
-			function getInput(id) {
-				return document.getElementById(id).value;
-			}
-			function editText(id, message) {
-				var element = document.getElementById(id);
-				element.innerHTML = message;
-			}
-			// slider!!
-			var imgIndex = 0;
-			var imgMax = 1;
-			var imgBank = ['/assets/restCounterAppRecordingSheet.png', '/assets/restCounterAppBrowsingPieces.png'];
-			var textBank = ['the user can record their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.', 'here, you can see the user opening a saved piece.'];
-			function updatePlayer(index) {
-				document.getElementById('setButton0').style.color = 'white';
-				document.getElementById('setButton1').style.color = 'white';
-				document.getElementById('playerImage').src = imgBank[index];
-				document.getElementById('playerText').innerHTML = textBank[index];
-				document.getElementById('setButton' + index).style.color = "#81807e";
-				
-			}
-			function increaseNumBy(n) {
-				if (imgIndex + n <= imgMax && imgIndex + n >= 0) {
-					imgIndex += n;
-				} else {
-					imgIndex -= n;
-				}
-				updatePlayer(imgIndex);
-			}
-			function setNum(n) {
-				imgIndex = n;
-				updatePlayer(imgIndex);
+<!doctype html>
+<html lang="en">
 
-			}
-		</script>
-		<!-- top part -->
-		<header>
-			<div class="headDiv">
-				<H1 class="websiteTitle">Trinity Yip</H1>
-			</div>
-		</header>
-		<!-- links -->
-		<nav>
-			<div class="navLinkContainer">
-				<a href="home.html" class="navLink" data-content="HOME">HOME</a>
-				<a href="resume.html" class="navLink" data-content="RESUME">RESUME</a>
-				<a href="projects.html" class="navLink" data-content="PROJECTS">PROJECTS</a>
-			</div>
-		</nav>
-	<!-- main site -->
-		<!-- rest counter -->
-			
-			<div class="projectDiv">
-				<p>Rest Counter App (Windows Forms, C#)</p>
-			</div>
-			<table>
-				<tr>
-					<td>
-					<!-- slider -->
-					<table class="slider">
-						<tr colspan="3">
-							<image src="/assets/restCounterAppRecordingSheet.png" id="playerImage" style="width:350px;/>
-						</tr>
-						<tr colspan="3">
-							<p id="playerText" style="width:350px; overflow:wrap;">the user can record their own music onto the application by entering the bpm, beats per bar, and the number of bars of rest or music.</p>
-						</tr>
-						<tr>
-							<td><button onClick="increaseNumBy(-1);" class="sliderButton" >&lt</button></td>
-							<td><div class="sliderButtonContainer">
-								<button onClick="setNum(0)" id="setButton0" class="sliderButton" >●</button>
-								<button onClick="setNum(1)" id="setButton1" class="sliderButton">●</button>
-							</div></td>
-							<td><button onClick="increaseNumBy(1);" class="sliderButton" >&gt</button></td>
-						</tr>
-					</table>
-					</td>
-					<td style="padding:40px;">
-						<h3>Overview</h3>
-						<ul>this application counts long rests for instrument players!</ul>
-						<ul>calculations are based on the tempo, time signature, and the number of bars of rest/music.</ul>
-						<ul>the user can 'play' the music by entering the player or save it on to the computer for later!</ul>
-					</td>
-					<td style="padding:40px;">
-						<h3>Technical Aspects</h3>
-						<ul>I used loops to save three arrays onto an xml file that is saved onto the user's computer</ul>
-						<ul>it is also loaded via loops!</ul>
-						<ul>I used C#, and Windows forms, and LINQ to XML to build this application</ul>
-					</td>
-				</tr>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="scss/custom.css">
 
-	</body>
+    <title>Trinity's Website - Home</title>
+    <link rel="icon" href="assets/site_favicon.svg">
+  </head>
+  <!-- BODY -->
+  <body>
+    <!-- navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+      <ul class="navbar-nav">
+        <a class="navbar-brand">
+          <img src="assets/site_icon.jpg" width=40 height=40>
+          Trinity's Website
+        </a>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Contact</a>
+              <a class="dropdown-item" href="#">I don't</a>
+              <a class="dropdown-item" href="#">Know what else to put</a>
+            </div>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- site biggest containers -->
+    <div class="container-fluid">
+      <!-- blank row-->
+      <div class="row">
+        <br/>
+      </div>
+      <!-- main site -->
+
+      <div class="row">
+        <!-- MAIN BODY (LEFT ROW) -->
+        <div class="col-sm-8" style="margin-left: 20px;">
+          <!-- FIRST PROJECT -->
+          <div class="row">
+
+            <div class="row">
+              <H2>Rest Counter App (Windows Forms, C#)<br/></H2>
+            </div>
+
+            <div class="row">
+            <!-- carousel -->
+            <div class="col-sm-4">
+
+              <div id="carouselRestCounter" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselRestCounter" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselRestCounter" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="assets/restCounter1.jpg" alt="Using the Sheet Music recorder.">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/restCounter2.png" alt="Browsing saved Sheet Music.">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselRestCounter" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselRestCounter" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+            </div>
+
+            <!-- overview -->
+            <div class="col-sm-4">
+              <br/>
+              <H3>Overview</H3>
+              <ul>
+                <li>this application counts long rests for instrument players!</li>
+                <li>calculations are based on the tempo, time signature, and the number of bars of rest/music.</li>
+                <li>the user can 'play' the music by entering the player or save it on to the computer for later!</li>
+              </ul>
+            </div>
+
+            <!-- technical aspects -->
+            <div class="col-sm-4">
+              <br/>
+              <H3>Technical Aspects</H3>
+              <ul>
+                <li>I used loops to save three arrays onto an xml file that is saved onto the user's computer</li>
+                <li>xml files are also loaded via loops!</li>
+                <li>I used C#, and Windows forms, and LINQ to XML to build this application</li>
+              </ul>
+            </div>
+          </div> <!--non-titled row -->
+          </div><!-- first project -->
+
+          <br/>
+
+            <!-- SECOND PROJECT -->
+
+        </div>
+
+        <!-- RIGHT MOST COLUMN -->
+        <div class="col-xs-2  mx-auto">
+          <br/>
+          <!-- Home Card -->
+          <div class ="row">
+            <div class="card" style="width: 30rem;">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-left:0px;">Home</h5>
+                <p class="card-text" style="margin-left:0px;">Go back to the beginning. Pretty useless but it fills out the page!</p>
+                <a href="index.html" class="card-link">Visit it here!</a>
+              </div>
+            </div>
+          </div>
+
+          <br/>
+
+          <!-- Resume Card -->
+          <div class ="row">
+            <div class="card" style="width: 30rem;">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-left:0px;">Resume</h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="margin-left:0px;">Education, work experience, and skills...</h6>
+                <p class="card-text" style="margin-left:0px;">If you didn't recieve my resume, or don't have it on you, you can read my resume on this page.</p>
+                <a href="resume.html" class="card-link">Visit it here!</a>
+                <a href="downloads/2020 resume.pdf" class="card-link">Or, click here to view or download my resume!</a>
+              </div>
+            </div>
+          </div>
+
+        </div> <!-- rightmost row-->
+      </div><!-- main row-->
+    </div> <!-- whole website container -->
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
 </html>
