--- a/resume.html
+++ b/resume.html
@@ -1,90 +1,159 @@
-<!DOCTYPE html>
-<html>
-	<!-- title defines website title, link applies css -->
-	<head>
-		<title>Trinity's Website - Resume</title>
-		<link rel="stylesheet" type="text/css" href="basic.css">
-	</head>
-	<!-- body -->
-	<body>
-		<!-- top part -->
-		<header>
-			<div class="headDiv">
-				<H1 class="websiteTitle">Trinity Yip</H1>
-			</div>
-		</header>
-		<!-- links -->
-		<nav>
-			<div class="navLinkContainer">
-				<a href="home.html" class="navLink" data-content="HOME">HOME</a>
-				<a href="resume.html" class="navLink" data-content="RESUME">RESUME</a>
-				<a href="projects.html" class="navLink" data-content="PROJECTS">PROJECTS</a>
-			</div>
-		</nav>
-		<!-- resume -->
-		<section>
-			<article>
-				<H2>EDUCATION</H2>
-				<H3>Richmond Green Secondary</H3>
-					<p>Expected graduation: June 2022</p>
-					<p>Awards:</p>
-					<ul>
-						<li>Highest Academic Standing, Computer Studies 2018-2019</li>
-						<li>Good Character, Chamber Orchestra Class 2018-2019</li>
-						<li>Innovative Photographer 2019-2020</li>
-					</ul>
-					<p>Grades:</p>
-					<ul>
-						<li>Grade 9: 93% average</li>
-						<li>Grade 10: 94% average</li>
-					</ul>
-				<H3>Richmond Rose Public School</H3>
-					<p>Graduation: June 2018</p>
-					<p>Awards:</p>
-					<ul>
-						<li>Principal's Award for Student Leadership</li>
-						<li>Respect, responsibility, honesty character awards</li>
-					</ul>
-			</article>
+<!doctype html>
+<html lang="en">
 
-			<article>
-				<H2>WORK & VOLUNTEER</H2>
-				<ul>
-					<li>Newspaper Delivery, Metroland Media, 2016-2017</li>
-					<li>Food and beverage attendant, Ribfest July 2018</li>
-					<li>Farmer's market, July 2018</li>
-					<li>Camp volunteer, August 2018</li>
-				</ul>
-			</article>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="scss/custom.css">
 
-			<article>
-				<H2>SKILLS</H2>
-				<H3>Programming Knowledge</H3>
-				<ul>
-					<li>solid understanding of Python 3, basic knowledge of Java, C#, C++, HTML5, and CSS</li>
-					<li>ranked 68 out of 3717 in the Canadian Computing Competition</li>
-					<li>participated in the York Region Computing Competition/ECOO</li>
-					<li>a collection of my projects can be found at <a href="https://github.com/trinity-y">my github</a></li>
-				</ul>
-				<H3>Leadership</H3>
-				<ul>
-					<H5>2017-2018</H5>
-						<li>organized many in-school events such as a mental health day and an event promoting STEM learning</li>
-						<li>co-founded, co-managed and edited the school's yearbook</li>
-						<li>provided audio and visuals for school assemblies and events</li>
-						<li>acted as lighting, curtains, movement of props, and designer for media for the school's talent show and assemblies</li>
-						<li>regularly organized and participated in the technological upkeep in my school's library</li>
-					<H5>2018-present</H5>
-						<li>member of Computer Science Club, Students in Action, Chamber Orchestra</li>
-						<li>co-president of tech crew</li>
-						<li>won the lighting award for the National Theater School festival (Central York)</li>
-				</ul>
-				<H3>Ability To Teach</H3>
-				<ul>
-					<li>helped many peers in my computer studies class understand content and develop their skills in Python and Pygame</li>
-					<li>volunteered at a Richmond Hill summer camp</li>
-					<li>knowledge of scratch, makey-makey, breadboard, arduino, windows forms other technology tools</li>
-			</article>
-		</section>
-	</body>
+    <title>Trinity's Website - Resume</title>
+    <link rel="icon" href="assets/site_favicon.svg">
+
+  </head>
+  <!-- BODY -->
+  <body>
+    <!-- navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+      <ul class="navbar-nav">
+        <a class="navbar-brand">
+          <img src="assets/site_icon.jpg" width=40 height=40>
+          Trinity's Site
+        </a>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Contact</a>
+              <a class="dropdown-item" href="#">I don't</a>
+              <a class="dropdown-item" href="#">Know what else to put</a>
+            </div>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- site biggest containers -->
+    <div class="container-fluid">
+      <!-- blank row-->
+      <div class="row">
+        <br/>
+      </div>
+      <!-- main site -->
+
+      <div class="row">
+        <div class="col-sm-8">
+          <!-- EDUCATION -->
+          <div class="row">
+            <div class="col-sm-2">
+            <H2>EDUCATION</H2>
+            </div>
+
+            <div class="col-sm-4">
+              <H3>Richmond Green Secondary</H3>
+                <p>Expected graduation: June 2022</p>
+                <p>Awards:</p>
+                <ul>
+                  <li>Innovative Photographer 2019-2020</li>
+                  <li>Lighting Award, National Theatre Festival, Centeral York, 2019</li>
+                  <li>Highest Academic Standing, Computer Studies 2018-2019</li>
+                  <li>Good Character, Chamber Orchestra Class 2018-2019</li>
+                </ul>
+                <p>Grades:</p>
+                <ul>
+                  <li>Grade 9: 93% average</li>
+                  <li>Grade 10: 94% average</li>
+                </ul>
+              </div>
+
+              <div class="col-sm-4">
+              <H3>Richmond Rose Public School</H3>
+                <p>Graduation: June 2018</p>
+                <p>Awards:</p>
+                <ul>
+                  <li>Principal's Award for Student Leadership</li>
+                  <li>Respect, responsibility, honesty character awards</li>
+                </ul>
+            </div>
+          </div>
+
+          <br/>
+
+          <!-- WORK & VOLUNTEER -->
+          <div class="row">
+            <div class="col-sm-2">
+            <H2>WORK & VOLUNTEER</H2>
+            </div>
+            <div class="col-sm-8">
+            <ul>
+              <li>Co-op student, bizZone, October 2020-present</li>
+              <li>Camp volunteer, August 2018</li>
+              <li>Food and beverage attendant, Ribfest July 2018</li>
+              <li>Farmer's market, July 2018</li>
+              <li>Newspaper Delivery, Metroland Media, 2016-2017</li>
+            </ul>
+            </div>
+          </div>
+
+          <br/>
+
+          <!-- SKILLS -->
+          <div class="row">
+            <div class="col-sm-2">
+            <H2>SKILLS</H2>
+            </div>
+            <div class="col-sm-4">
+              <H3>Programming Knowledge</H3>
+              <ul>
+                <li>a collection of my projects can be found at <a href="https://github.com/trinity-y">my github</a></li>
+                <li>comfortable with Python 3, C#</li>
+                <li>familiar with Java, C++, HTML5, CSS, Javascript</li>
+                <li>have used VIM, Github, pip, command line compilers</li>
+                <li>ranked 68 out of 3717 in the Canadian Computing Competition</li>
+                <li>participated in the York Region Computing Competition/ECOO</li>
+              </ul>
+            </div>
+
+            <div class="col-sm-3">
+              <H3>Leadership</H3>
+              <H5>2019-Present</H5>
+              <ul>
+                  <li>member of Computer Science Club, Students in Action, Chamber Orchestra</li>
+                  <li>co-president of Tech Crew</li>
+                  <li>co-founder, co-president of Game Development Club</li>
+              </ul>
+
+              <H5>2017-2018</H5>
+              <ul>
+                  <li>organized many in-school events such as a mental health day and an event promoting STEM learning</li>
+                  <li>co-founded, co-managed and edited the school's yearbook</li>
+                  <li>provided audio and visuals for school assemblies and events</li>
+                  <li>acted as lighting, curtains, movement of props, and designer for media for the school's talent show and assemblies</li>
+              </ul>
+            </div>
+
+            <div class="col-sm-3">
+              <H3>Ability To Teach</H3>
+              <ul>
+                <li>helped many peers in my computer studies class understand content and develop their skills in Python and Pygame</li>
+                <li>volunteered at a Richmond Hill summer camp</li>
+                <li>knowledge of scratch, makey-makey, breadboard, arduino, windows forms other technology tools</li>
+              </ul>
+            </div>
+        </div>
+      </div>
+
+
+    <!-- Optional JavaScript -->
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
 </html>
