added bootstrap to index, fixed links

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
                 <h6 class="card-subtitle mb-2 text-muted" style="margin-left:0px;">C#, Python...</h6>
                 <p class="card-text" style="margin-left:0px;">On my projects page, I'll briefly explain each project and what I think are the important technical aspecs of each. I've also added pictures, so you don't need to download and run the project yourself.</p>
                 <a href="projects.html" class="card-link">Visit it here!</a>
-                <a href="github.com/trinity-y" class="card-link">Or see my projects on Github!</a>
+                <a href="http://github.com/trinity-y" class="card-link">Or see my projects on Github!</a>
               </div>
             </div>
           </div>
