--- a/resume.html
+++ b/resume.html
@@ -26,14 +26,7 @@
         <a class="nav-link" href="index.html">Projects</a>
         <a class="nav-link" href="resume.html">Resume</a>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Contact</a>
-              <a class="dropdown-item" href="#">I don't</a>
-              <a class="dropdown-item" href="#">Know what else to put</a>
-            </div>
-        </li>
+
       </ul>
     </nav>
 
@@ -58,8 +51,11 @@
                 <p>Expected graduation: June 2022</p>
                 <p>Awards:</p>
                 <ul>
+                  <li>Highest Academic Standing, Chamber Orchestra, 2019-2020</li>
+                  <li>Most Improved, Chamber Orchestra, 2019-2020</li>
+                  <li>Lighting Award, National Theatre Festival, York, 2020</li>
                   <li>Innovative Photographer 2019-2020</li>
-                  <li>Lighting Award, National Theatre Festival, Centeral York, 2019</li>
+                  <li>Lighting Award, National Theatre Festival, Central York, 2019</li>
                   <li>Highest Academic Standing, Computer Studies 2018-2019</li>
                   <li>Good Character, Chamber Orchestra Class 2018-2019</li>
                 </ul>
@@ -111,8 +107,8 @@
               <ul>
                 <li>a collection of my projects can be found at <a href="https://github.com/trinity-y">my github</a></li>
                 <li>comfortable with Python 3, C#</li>
-                <li>familiar with Java, C++, HTML5, CSS, Javascript</li>
-                <li>have used VIM, Github, pip, command line compilers</li>
+                <li>familiar with C++, PHP, HTML5, CSS, SQL</li>
+                <li>have used VIM, Github, pip, command line compilers, XAMPP</li>
                 <li>ranked 68 out of 3717 in the Canadian Computing Competition</li>
                 <li>participated in the York Region Computing Competition/ECOO</li>
               </ul>
@@ -120,19 +116,14 @@
 
             <div class="col-sm-3">
               <H3>Leadership</H3>
-              <H5>2019-Present</H5>
+              <H5>Present</H5>
               <ul>
-                  <li>member of Computer Science Club, Students in Action, Chamber Orchestra</li>
-                  <li>co-president of Tech Crew</li>
                   <li>co-founder, co-president of Game Development Club</li>
-              </ul>
-
-              <H5>2017-2018</H5>
-              <ul>
-                  <li>organized many in-school events such as a mental health day and an event promoting STEM learning</li>
-                  <li>co-founded, co-managed and edited the school's yearbook</li>
-                  <li>provided audio and visuals for school assemblies and events</li>
-                  <li>acted as lighting, curtains, movement of props, and designer for media for the school's talent show and assemblies</li>
+                  <li>Canada Learning Code teen ambassador</li>
+                  <li>YRHacks committee member</li>
+                  <li>treasurer and vice president of Astrid Non-profit</li>
+                  <li>co-president of Tech Crew</li>
+                  <li>member of algorithm club</li>
               </ul>
             </div>
 
@@ -141,7 +132,7 @@
               <ul>
                 <li>helped many peers in my computer studies class understand content and develop their skills in Python and Pygame</li>
                 <li>volunteered at a Richmond Hill summer camp</li>
-                <li>knowledge of scratch, makey-makey, breadboard, arduino, windows forms other technology tools</li>
+                <li>knowledge of scratch, makey-makey, breadboard, arduino</li>
               </ul>
             </div>
         </div>
