--- a/home.html
+++ b/home.html
@@ -50,11 +50,7 @@
           <h2>Thanks for visiting!</h2>
           <br/>
           <p>This site was made with HTML5 and Bootstrap.</p>
-          <p>It's still incomplete - I hope to add more of my projects in the future.</p>
-          <p>I have no ideas on what to write as filler text!!! So I'm just using those latin generators.</p>
-          <p>Lorem ipsum dolor sit amet, eius impedit consequat in est, at fastidii voluptatibus eam. Cu odio denique tincidunt vim. No vel quod paulo periculis, in pri mazim copiosae intellegebat, mutat vitae vim eu. Ei sit harum adipisci, cu vim aeterno pertinax periculis. Dicta admodum sea ad. Falli munere ceteros ius eu.</p>
-          <p>Quis fuisset fierent has ad, vim id vocent option. Ad paulo propriae recusabo eam, enim officiis forensibus te eum, in graece dictas senserit has. Mel id everti qualisque splendide, noster nostro aeterno ad nec. Prima labitur praesent ius in, sed ea erant iracundia.</p>
-        </div>
+          <p>It's still incomplete - I hope to add more of my projects in the future.</p></div>
 
         <!-- CARDS -->
         <div class="col-xs-2  mx-auto">
