forgot to edit the locked bit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div style="margin: 1em;">
     <H2 style="margin: 0;" >Thanks for Visiting! </H2>
     <p style="margin: 0;">Please enter the password to get in!</p>
-    <input class="input-group-text" style="display:inline;" id="inputField"/><button class="btn btn-outline-secondary" onclick="window.location.href=joinTwo(getInput('inputField'), '.php');">submit</button>
+    <input class="input-group-text" style="display:inline;" id="inputField"/><button class="btn btn-outline-secondary" onclick="window.location.href=joinTwo(getInput('inputField'), '.html');">submit</button>
 </div>
 
 
